// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/admin_console/access_control/channel_list > should match snapshot with channels 1`] = `
<div>
  <div
    class="AccessControlPolicyChannelsList"
  >
    <div
      class="DataGrid customTable"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 8;"
        >
          <div
            class="ChannelList__autoAddHeader"
          >
            <input
              aria-label="Auto-add members"
              class="header-checkbox"
              id="auto-add-header-checkbox"
              type="checkbox"
            />
            <span
              class="header-text"
            >
              Auto-add members
            </span>
            <i
              class="icon icon-information-outline ChannelList__autoAddInfoIcon"
            />
          </div>
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        />
      </div>
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_empty"
        >
          No items found
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 2 of 2
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/access_control/channel_list > should match snapshot with channels to remove 1`] = `
<div>
  <div
    class="AccessControlPolicyChannelsList"
  >
    <div
      class="DataGrid customTable"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-4-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-4-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-4-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 8;"
        >
          <div
            class="ChannelList__autoAddHeader"
          >
            <input
              aria-label="Auto-add members"
              class="header-checkbox"
              id="auto-add-header-checkbox"
              type="checkbox"
            />
            <span
              class="header-text"
            >
              Auto-add members
            </span>
            <i
              class="icon icon-information-outline ChannelList__autoAddInfoIcon"
            />
          </div>
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        />
      </div>
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_empty"
        >
          No items found
        </div>
      </div>
      <div
        class="DataGrid_footer"
      >
        <div
          class="DataGrid_cell"
        >
          1 - 2 of 2
          <button
            aria-label="Previous page"
            class="btn btn-quaternary btn-icon btn-sm ml-2 prev disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-left"
              title="Previous Icon"
            />
          </button>
          <button
            aria-label="Next page"
            class="btn btn-quaternary btn-icon btn-sm next disabled"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-chevron-right"
              title="Next Icon"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/access_control/channel_list > should match snapshot with no channels 1`] = `
<div>
  <div
    class="AccessControlPolicyChannelsList"
  >
    <div
      class="DataGrid customTable"
    >
      <div
        class="DataGrid_search"
      >
        <div
          class="DataGrid_searchBar"
        >
          <span
            aria-hidden="true"
            class="DataGrid_searchIcon"
          >
            <i
              class="fa fa-search"
              title="Search Icon"
            />
          </span>
          <input
            data-testid="searchInput"
            placeholder="Search"
            type="text"
            value=""
          />
          <i
            class="DataGrid_clearButton fa fa-times-circle hidden"
            data-testid="clear-search"
          />
        </div>
        <div
          class="Filter"
        >
          <button
            class="Filter_button"
            type="button"
          >
            <i
              class="Icon icon-filter-variant"
            />
            Filters
          </button>
          <div
            class="Filter_content"
          >
            <div
              class="Filter_header"
            >
              <div
                class="Filter_title"
              >
                Filter by
              </div>
              <a
                class="Filter_reset"
              >
                Reset filters
              </a>
            </div>
            <hr />
            <div
              class="Filter_lists"
            >
              <div
                class="FilterList FilterList__full"
              >
                <div
                  class="FilterList_name"
                >
                  Teams
                </div>
                <div
                  class="css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class="filterListSelect__control css-13cymwt-control"
                  >
                    <div
                      class="filterListSelect__value-container filterListSelect__value-container--is-multi css-hlgwow"
                    >
                      <div
                        class="filterListSelect__placeholder css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Search and select teams
                      </div>
                      <div
                        class="filterListSelect__input-container css-19bb58m"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class="filterListSelect__input"
                          id="adminConsoleTeamFilterDropdown"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class="filterListSelect__indicators css-1wy0on6"
                    >
                      <span
                        class="filterListSelect__indicator-separator css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class="filterListSelect__indicator filterListSelect__dropdown-indicator css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              class="btn btn-primary btn-sm Filter_apply"
              disabled=""
              type="button"
            >
              Apply
            </button>
          </div>
        </div>
      </div>
      <div
        class="DataGrid_header"
      >
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Name
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 7;"
        >
          Team
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 8;"
        >
          <div
            class="ChannelList__autoAddHeader"
          >
            <input
              aria-label="Auto-add members"
              class="header-checkbox"
              id="auto-add-header-checkbox"
              type="checkbox"
            />
            <span
              class="header-text"
            >
              Auto-add members
            </span>
            <i
              class="icon icon-information-outline ChannelList__autoAddInfoIcon"
            />
          </div>
        </div>
        <div
          class="DataGrid_cell"
          style="flex-grow: 3;"
        />
      </div>
      <div
        class="DataGrid_rows"
      >
        <div
          class="DataGrid_empty"
        >
          No items found
        </div>
      </div>
    </div>
  </div>
</div>
`;
